# USB-DAC-with-interactive-Parametric-EQ

./: README.md
case/: README.md  button.stl  case02.blend  case1.stl  case2.stl
src/: CMakeLists.txt  README.md  draw.c  draw.h  eq.c  eq.h  font.c  sound-eq.c
